new array pages

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/console.html">The browser console</a></li>
+                    <li><a href="pages/basics/console.html">The browser console</a></li>
                     <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
@@ -44,8 +44,8 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
-                  <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
+                    <li><a href="pages/basics/syntax.html">Basic Syntax</a></li>
+                    <li><a href="pages/scripts/script-basics.html">Basic script examples</a></li>
                 </ul>
             </ul>
         </nav>
@@ -57,14 +57,36 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
-                  <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
-                  <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
-                  <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
-                  <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
+                    <li><a href="pages/dom/accessing-the-dom.html">Accessing the DOM content</a></li>
+                    <li><a href="pages/dom/read-only-properties.html">Interacting with READ-ONLY properties</a></li>
+                    <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
+                    <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
+                    <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
+                    <li><h5>Events</h5></li>
+                    <li><a href="pages/events/events.html">Events</a></li>
+                    <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                 </ul>
             </ul>
         </nav>
+
+
+        <h2>Arrays</h2>
+        <nav>
+            <ul class="main-nav">
+
+                <ul class="sub-nav">
+                    <li>
+                        <h5>Basics</h5></li>
+                    <li><a href="pages/arrays/arrays.html">Arrays</a></li>
+                    <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a></li>
+                    <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a></li>
+                    <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a></li>
+                    <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
+                    <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a></li>
+                </ul>
+            </ul>
+        </nav>
+
 
 
         <h2>Functions</h2>
@@ -72,15 +94,17 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><h5>Basics</h5></li>
-                  <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
-                  <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
-                  <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
-                  <li><h5>Topics</h5></li>
-                  <li><a href="pages/functions/closures.html">Closures</a></li>
-                  <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
-                  <li><a href="pages/functions/modules.html">Modules</a></li>
-                  <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
+                    <li>
+                        <h5>Basics</h5></li>
+                    <li><a href="pages/functions/basic-functions.html">Basic Functions</a></li>
+                    <li><a href="pages/functions/immediately-invoked-functions.html">Immediately Invoked Functions</a></li>
+                    <li><a href="pages/functions/invoking-functions.html">Invoking Functions</a></li>
+                    <li>
+                        <h5>Topics</h5></li>
+                    <li><a href="pages/functions/closures.html">Closures</a></li>
+                    <li><a href="pages/functions/hoisting.html">Hoisting</a></li>
+                    <li><a href="pages/functions/modules.html">Modules</a></li>
+                    <li><a href="pages/functions/namespacing.html">Namespacing</a></li>
                 </ul>
             </ul>
         </nav>
@@ -91,10 +115,10 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/objects/objects.html">Objects</a></li>
-                  <li><a href="pages/objects/methods.html">Methods</a></li>
-                  <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
-                  <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
+                    <li><a href="pages/objects/objects.html">Objects</a></li>
+                    <li><a href="pages/objects/methods.html">Methods</a></li>
+                    <li><a href="pages/objects/prototypal-inheritance.html">Prototypal Inheritance</a></li>
+                    <li><a href="pages/objects/object-constructors.html">Object Constructors</a></li>
                 </ul>
             </ul>
         </nav>
@@ -106,7 +130,7 @@
 
                 <ul class="sub-nav">
                     <li><a class="red" href="examples/code-examples.html">Common code examples</a>
-                      <li><a href="examples/test-page.html">Test Page</a>
+                        <li><a href="examples/test-page.html">Test Page</a>
                 </ul>
             </ul>
         </nav>
@@ -117,7 +141,7 @@
             <ul class="main-nav">
 
                 <ul class="sub-nav">
-                  <li><a href="pages/basics/links.html">Links and references</a></li>
+                    <li><a href="pages/basics/links.html">Links and references</a></li>
                 </ul>
             </ul>
         </nav>
