--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -12,34 +12,12 @@
 <body>
 
     <p id="demo"></p>
-
+<button onclick="alert('pushed pink')">
 </body>
 
 
 
 <script>
-
-
-function Course(title,instructor,level,views) {
-  this.title = title;
-  this.instructor = instructor;
-  this.level = level;
-  this.views = views;
-  this.updateViews = function() {
-      return ++this.views;
-    };
-}
-
-var course01 = new Course("JavaScript Essential Training",
-                           "Teacher Name",
-                            1,
-                            0);
-console.log(course01);
-
-var course02 = new Course("New course name", "other teacher Name", 3, 1234);
-console.log(course02);
-
-
 
 </script>
 
