--- a/index.html
+++ b/index.html
@@ -62,9 +62,13 @@
                     <li><a href="pages/dom/changing-attributes.html">Changing attributes</a></li>
                     <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
                     <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
+
                     <li><h5>Events</h5></li>
                     <li><a href="pages/events/events.html">Events</a></li>
                     <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
+                    <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
+                    <li><a href="pages/events/stopping-an-event.html">Stopping an Event</a></li>
+
                 </ul>
             </ul>
         </nav>
