--- a/pages/events/events.html
+++ b/pages/events/events.html
@@ -145,6 +145,7 @@
                     <li>The other less common advantage is that events can be triggered by non-dom elements, which means that with that method you can write your own event.</li>
                     <li>And different parts of your code can listen for those events that you've created yourself, and then you can execute pieces of code based on that.</li>
                 </ul>
+                <p>NOTE: true or false dictates <a href="event-propagation.html">'capturing phase' or 'bubling phase'</a>.</p>
             </div>
 
             <div class="col-6">
