--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -11,11 +11,7 @@
 
 <body>
 
-  <ul id ="grid">
-  <li><img src"green.gif" alt="green" id="green"></li>
-  <li><img src"red.gif" alt="red" id="red"></li>
-  <li><img src"pink.gif" alt="pink" id="pink"></li>
-  </ul>
+<p id="demo"></p>
 
 </body>
 
@@ -23,14 +19,9 @@
 
 <script>
 
-document.getElementById('grid').addEventListener('click', function(e) {
-  console.log("Clicked inside UL");
-} , false);
-
-document.getElementById('pink').addEventListener('click', function(e) {
-  console.log(e.toElement.alt);
-} , false);
-
+var str = "Apple, Banana, Kiwi";
+var res = str.slice(-12,-6);
+document.getElementById("demo").innerHTML = res;
 
 </script>
 
