--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/scope.html">Scope</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
+                    <li><a href="pages/basics/string-methods.html">String Methods</a></li>
                     <li><a href="pages/basics/this.html">this</a></li>
                     <li><a href="pages/basics/typeof.html">typeof</a></li>
                     <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
