--- a/pages/basics/strings.html
+++ b/pages/basics/strings.html
@@ -27,8 +27,8 @@
             </div>
         </div>
 
-        <h2>Basics</h2>
-        <h3>Creating a string</h3>
+        <h1>Basics</h1>
+        <h2>Creating a string</h2>
 
         <div class="row">
             <div class="col-6">
@@ -61,7 +61,7 @@ alert(typeof sum);</span></pre>
 
 
     <section class="container">
-        <h2>Special characters</h2>
+        <h1>Special characters</h1>
         <div class="row">
             <div class="col">
                 <ul>
@@ -155,7 +155,7 @@ alert(unicode)</pre>
 
 
     <section class="container">
-        <h2>Escaping quotes</h2>
+        <h1>Escaping quotes</h1>
         <div class="row">
             <div class="col">
                 <p>To escape a quote, add a \ slash before the quote.</p>
@@ -202,51 +202,8 @@ alert(str)</pre>
     </section>
 
 
-
-
-
-
-
     <section class="container">
-        <h2>String length</h2>
-        <div class="row">
-            <div class="col-6">
-                <p>Print the number of characters in a string.</p>
-                <p>This prints 3 since the newline is its own character.</p>
-            </div>
-
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "My\n"
-alert(str.length)</pre>
-            </div>
-        </div>
-    </section>
-
-
-
-
-    <section class="container">
-        <h2>Accessing a single character in a string</h2>
-        <div class="row">
-            <div class="col-6">
-                <p>There are 2 ways to do this.</p>
-            </div>
-
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "string text"
-alert( str.charAt(2) )
-
-var str = "string text"
-alert(str[2])</pre>
-            </div>
-        </div>
-    </section>
-
-
-
-
-
-    <section class="container">
+        <h1>Altering Strings</h1>
         <h2>Changing string text</h2>
         <div class="row">
             <div class="col-6">
@@ -262,8 +219,6 @@ alert(str)</pre>
             </div>
         </div>
     </section>
-
-
 
 
     <section class="container">
@@ -293,160 +248,50 @@ alert(str)</pre>
 
 
 
-
-
     <section class="container">
-        <h2>Searching for a sub-string in a string</h2>
-
+        <h1>Breaking Long Code Lines</h1>
         <div class="row">
-            <div class="col-6">
-                <p>Use indexOf() to search for a sub-string within a string.</p>
-                <p>It returns the position of a first occurence of a substring or -1 if nothing found.</p>
-                <p>This example returns the following:</p>
-                <ul>
-                    <li>returns 0</li>
-                    <li>returns 1 because the second character starts with 'id'</li>
-                    <li>returns -1</li>
-                </ul>
-
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "Widget with id"
-
-alert( str.indexOf("Widget") )
-alert( str.indexOf("id") )
-alert( str.indexOf("Lalala") ) </pre>
+            <div class="col">
+                <p>For best readability, programmers often like to avoid code lines longer than 80 characters.</p>
+                <p>There are a few ways to do this.</p>
             </div>
         </div>
 
-        <h3>Find sub-string after beginning at a specific index</h3>
+        <h3>Breaking after an operator</h3>
         <div class="row">
             <div class="col-6">
-                <p>This starts searching at character 2.</p>
-                <p>It returns 12 because that's the first character position (after 2) that starts with 'id'.</p>
+                <p>The clearest place to break is after an operator.</p>
+
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "Widget with id"
-alert( str.indexOf("id", 2) ) </pre>
+                <pre class="example"><span class="code-js">document.getElementById("demo").innerHTML =
+"Hello Dolly!"; </pre>
             </div>
         </div>
 
-
-        <h3>Find a sub-string starting at a specific character</h3>
+        <h3>Using a backslash</h3>
         <div class="row">
             <div class="col-6">
-                <p>Syntax</p>
+                <p>This is not recommended since some browsers may not support it.</p>
+
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">substr(beginning_value , how_many_to_extract)</pre>
+                <pre class="example"><span class="code-js">document.getElementById("demo").innerHTML = "Hello \
+Dolly!";</pre>
             </div>
         </div>
 
+        <h3>Using string addition with +</h3>
         <div class="row">
             <div class="col-6">
-                <p>This prints 'ring'.</p>
+                <p>Use the + sign to add two string together.</p>
+
             </div>
             <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "stringify"
-str = str.substr(2,4)
-alert(str)</pre>
+                <pre class="example"><span class="code-js">document.getElementById("demo").innerHTML = "Hello " +
+"Dolly!";</pre>
             </div>
         </div>
-
-
-
-
-  <h3>Find a sub-string between specific characters</h3>
-
-        <div class="row">
-            <div class="col-6">
-                <p>Syntax</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">substring(beginning_value , end_value)</pre>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-6">
-                <p>This prints the letter 's'.</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "stringify"
-alert(str.substring(0,1))</pre>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-6">
-                <p>This prints ringify since only the first value was specified.</p>
-            </div>
-            <div class="col-6">
-                <pre class="example"><span class="code-js">var str = "stringify"
-alert(str.substring(2))</pre>
-            </div>
-        </div>
-
-<h4>What if first value is larger than second?</h4>
-<div class="row">
-    <div class="col-6">
-        <p>If the first value is larger, the values are swapped.</p>
-        <p>-1 becomes zero, then the values are swapped.</p>
-        <p>This returns 'test'.</p>
-    </div>
-    <div class="col-6">
-        <pre class="example"><span class="code-js">alert( "testme".substring(4, -1) )</pre>
-    </div>
-</div>
-
-
-<h4>NOTE: slice() does the same thing</h4>
-<div class="row">
-    <div class="col-6">
-        <p>The difference between slice() and substring() is how they treat negative and overflow values.</p>
-        <p>Negative values using substring() become zero.</p>
-        <p>This returns 'testme' because -2 becomes 0, and there's no second value.</p>
-
-    </div>
-    <div class="col-6">
-        <pre class="example"><span class="code-js">alert( "testme".substring(-2) ) </pre>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col-6">
-        <p>slice is the same with positive values.</p>
-        <p>This returns 'test'.</p>
-
-    </div>
-    <div class="col-6">
-        <pre class="example"><span class="code-js">alert ( "testme".slice(0, 4));</pre>
-    </div>
-</div>
-
-
-
-<div class="row">
-    <div class="col-6">
-        <p>With slice() and negative values, it counts back from the end.</p>
-        <p>This returns 'me'.</p>
-
-    </div>
-    <div class="col-6">
-        <pre class="example"><span class="code-js">alert( "testme".slice(-2) )  </pre>
-    </div>
-</div>
-
-
-<div class="row">
-    <div class="col-6">
-                <p><span class="red">why does this return 'm'?</span></p>
-
-    </div>
-    <div class="col-6">
-        <pre class="example"><span class="code-js">alert ( "testme".slice(4, -1));</pre>
-    </div>
-</div>
     </section>
 
 
