--- a/pages/basics/variables.html
+++ b/pages/basics/variables.html
@@ -33,6 +33,51 @@
             </div>
         </div>
 
+
+        <h2>Declaring variables</h2>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Declare a variable that's undefined (has no value).</p>
+            </div>
+            <div class="col-6">
+              <pre class="example"><span class="code-js">var carName;</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>You can then assign a value.</p>
+            </div>
+            <div class="col-6">
+              <pre class="example"><span class="code-js">carName = "Volvo";</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>You can also declare several variables in a singl statement.</p>
+            </div>
+            <div class="col-6">
+              <pre class="example"><span class="code-js">var person = "John Doe", carName = "Volvo", price = 200;</pre>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <p>A declaration can span multiple lines.</p>
+            </div>
+            <div class="col-6">
+              <pre class="example"><span class="code-js">var person = "John Doe",
+carName = "Volvo",
+price = 200;</pre>
+            </div>
+        </div>
+
+
+
+
+
         <h2>2 new types in ES2015</h2>
         <h3>const</h3>
         <div class="row">
@@ -75,7 +120,7 @@ MYCONSTANT = 6;</span></pre>
 logScope();</span></pre>
             </div>
         </div>
-</section>
+    </section>
 
 
 
@@ -86,32 +131,31 @@ logScope();</span></pre>
 
 
 
+    <section class="container">
+        <h1>Variable Scope</h1>
+        <div class="row">
+            <div class="col">
+                <p>Scope determines where in your code your variable is available.</p>
+                <p>The location of the variable and how it is declared determines the scope.</p>
+                <p>There are 3 types of scope in JavaScript.</p>
+                <ul>
+                    <li>Global - This is when you declare the variable outside of any function. You can then access it in any script. However, if you update the variable within any function, the global value changes. So, any other references to that variable
+                        are updated as well.</li>
+                    <li>Local - This is when you declare the variable inside a function. It's only then available within that function.</li>
+                    <li>Block - new scope added with ES2015 used with 'const' and 'let' variables. The scope is limited to a small block of code, even within a function.</li>
+                </ul>
 
-
-<section class="container">
-    <h1>Variable Scope</h1>
-    <div class="row">
-        <div class="col">
-            <p>Scope determines where in your code your variable is available.</p>
-            <p>The location of the variable and how it is declared determines the scope.</p>
-            <p>There are 3 types of scope in JavaScript.</p>
-            <ul>
-                <li>Global - This is when you declare the variable outside of any function. You can then access it in any script.	However, if you update the variable within any function, the global value changes. So, any other references to that variable are updated as well.</li>
-                <li>Local - This is when you declare the variable inside a function. It's only then available within that function.</li>
-                <li>Block - new scope added with ES2015 used with 'const' and 'let' variables. The scope is limited to a small block of code, even within a function.</li>
-            </ul>
-
+            </div>
         </div>
-    </div>
-  </section>
+    </section>
 
 
 
 
 
 
-        <script src="../../_js/jquery.js"></script>
-        <script src="../../_js/bootstrap.bundle.js"></script>
+    <script src="../../_js/jquery.js"></script>
+    <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
 
 </html>
