--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="_css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="_css/style.css">
 
-    <title>Linking CSS to your page</title>
+    <title>JavaScript Tutorial</title>
 </head>
 
 <body>
@@ -27,6 +27,8 @@
                     <li><a href="pages/basics/console.html">The browser console</a></li>
                     <li><a href="pages/basics/displaying-data.html">Displaying data</a></li>
                     <li><a href="pages/basics/linking-js.html">Linking JS to your page</a></li>
+                    <li><a href="pages/basics/numbers.html">Numbers</a></li>
+                    <li><a href="pages/basics/number-methods.html">Number methods</a></li>
                     <li><a href="pages/basics/operators.html">Operators</a></li>
                     <li><a href="pages/basics/scope.html">Scope</a></li>
                     <li><a href="pages/basics/strings.html">Strings</a></li>
@@ -64,7 +66,8 @@
                     <li><a href="pages/dom/changing-css.html">Changing CSS</a></li>
                     <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
 
-                    <li><h5>Events</h5></li>
+                    <li>
+                        <h5>Events</h5></li>
                     <li><a href="pages/events/events.html">Events</a></li>
                     <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                     <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
@@ -83,11 +86,14 @@
                     <li>
                         <h5>Basics</h5></li>
                     <li><a href="pages/arrays/arrays.html">Arrays</a></li>
+                    <li>
+                        <h5>Methods</h5></li>
                     <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a></li>
                     <li><a href="pages/arrays/searching-an-array.html">Searching an Array</a></li>
                     <li><a href="pages/arrays/arrays-and-strings.html">Arrays and Strings</a></li>
                     <li><a href="pages/arrays/arrays-of-objects.html">Arrays of Objects</a></li>
                     <li><a href="pages/arrays/sorting-arrays.html">Sorting Arrays contents</a></li>
+                    <li><a href="pages/arrays/misc-array-methods.html">Misc Array methods</a></li>
                 </ul>
             </ul>
         </nav>
