Added new Array stuff again

--- a/examples/test-page.html
+++ b/examples/test-page.html
@@ -17,7 +17,13 @@
 
 <script>
 
+var points = [40, 100, 1, 5, 25, 10];
 
+function myArrayMax(arr) {
+    return Math.min.apply(null, arr);
+}
+
+console.log(myArrayMax(points));
 
 
 
