--- a/pages/arrays/misc-array-methods.html
+++ b/pages/arrays/misc-array-methods.html
@@ -19,16 +19,37 @@
 
       <section class="container">
         <h2>Running a method on an Array</h2>
+        <h3>reverse()</h3>
         <div class="row">
             <div class="col-6">
                 <p>Use this syntax to run a method on an Array: <span class="standout">ArrayName.method();</span></p>
-                <p>This runs a method named reverse() on the array myarray.</p>
+
 
             </div>
             <div class="col-6">
                 <pre class="example"><span class="code-js">myarray.reverse();</span></pre>
             </div>
         </div>
+
+
+
+        <div class="row">
+            <div class="col-6">
+                <p>This runs a method named reverse() on the array myarray.</p>
+                <p>This first sorts in correct alpha order, then reverse it.</p>
+
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var fruits = ["Banana", "Orange", "Apple", "Mango"];
+console.log(fruits.sort());
+console.log(fruits.reverse());</span></pre>
+            </div>
+        </div>
+
+
+
+
+
 
         </section>
 
