--- a/pages/arrays/sorting-arrays.html
+++ b/pages/arrays/sorting-arrays.html
@@ -16,30 +16,107 @@
 <body>
     <a href="../../index.html">Home page</a>
 
-      <section class="container">
-          <h1>Sorting Arrays with sort()</h1>
+    <section class="container">
+        <h1>Sorting Arrays with sort()</h1>
+
+        <h2>Alpha Sorting</h1>
 
           <div class="row">
               <div class="col-6">
-                <p>This outputs: Array(3) [ 1, 15, 2 ]</p>
-<p>Notice something strange? The order is 1, 15, 2.</p>
-<p>That’s because sort() converts everything to string and uses lexicographical order by default.</p>
+                <p>sort() puts alpha strings in alpa order.</p>
+                <p>This prints: Apple,Banana,Mango</p>
               </div>
               <div class="col-6">
-<pre class="example"><span class="code-js">var arr = [ 1, 2, 15 ]
-arr.sort()
-console.log(arr);</span></pre>
+      <pre class="example"><span class="code-js">var fruits = ["Banana", "Apple", "Mango"];
+console.log(fruits.sort());</span></pre>
               </div>
           </div>
 
-<h3>Sorting in correct order</h3>
-          <div class="row">
-              <div class="col-6">
-                <p>To make it smarter, we need to pass in the custom comparison function. It should accept two arguments and return 1, 0 or -1.</p>
+
+
+
+<h2>Numeric sorting</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>This outputs: Array(3) [ 1, 15, 2 ]</p>
+                <p>Notice something strange? The order is 1, 15, 2.</p>
+                <p>That’s because sort() converts everything to string and uses lexicographical order by default.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var arr = [ 1, 2, 15 ]
+arr.sort()
+console.log(arr);</span></pre>
+            </div>
+        </div>
+
+
+        <h3>Sorting in correct order using a comparison function</h3>
+        <h3 class="red">RE-read this to fully understand</h3>
+        <div class="row">
+            <div class="col">
+                <p>To make it smarter, we need to pass in the custom comparison function.</p>
+                <p>It should accept two arguments and return 1, 0 or -1.</p>
+                <p>The purpose of the compare function is to define an alternative sort order.</p>
+                <p>The compare function should return a negative, zero, or positive value, depending on the arguments</p>
+            </div>
+        </div>
+
+        <h4>Syntax</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>Example of a comparison function</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function(a, b){return a-b}</span></pre>
+            </div>
+        </div>
+
+
+        <h4>Example (increasing order)</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This sorts in increasing order.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+
+function myFunction() {
+    points.sort(function(a, b)
+    {return a - b}
+  );
+  console.log(points);
+}
+
+myFunction();</span></pre>
+            </div>
+        </div>
+        <h4>Example (decreasing order)</h4>
+        <div class="row">
+            <div class="col-6">
+                <p>This sorts in increasing order.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+
+function myFunction() {
+    points.sort(function(a, b)
+    {return b - a}
+  );
+  console.log(points);
+}
+
+myFunction();</span></pre>
+            </div>
+        </div>
+
+
+        <h4>Another example</h4>
+        <div class="row">
+            <div class="col-6">
                 <p>This outputs: Array(3) [ 1, 2, 15 ]</p>
-              </div>
-              <div class="col-6">
-<pre class="example"><span class="code-js">function compare(a, b) {
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">function compare(a, b) {
   if (a > b) return 1
   else if (a < b) return -1
   else return 0
@@ -48,9 +125,121 @@ console.log(arr);</span></pre>
 var arr = [ 1, 2, 15 ]
 arr.sort(compare)
 console.log(arr);</span></pre>
-              </div>
-          </div>
-        </section>
+            </div>
+        </div>
+
+
+
+
+
+
+        <h2>Random sorting</h2>
+        <div class="row">
+            <div class="col-6">
+                <p>Use a compare function with Math.random()</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+points.sort(function(a, b) {
+  return 0.5 - Math.random()
+
+  }
+);
+
+console.log(points);</span></pre>
+            </div>
+        </div>
+
+
+
+
+
+        <h1>Find the Highest (or Lowest) Array Value</h1>
+
+
+        <h3>Sorting</h3>
+        <div class="alert alert-note">
+            <div class="alert-icon">
+                <img src="../../_img/note-icon.png" width="60" height="60">
+            </div>
+            <div class="alert-content">
+                <p>Sorting a whole array is a very inefficient method if you only want to find the highest (or lowest) value.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <p>There are no built-in functions for finding the max or min value in an array.</p>
+                <p>However, after you have sorted an array, you can use the index to obtain the highest and lowest values.</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+points.sort(function(a, b){
+  return a-b
+});
+
+console.log(points[0]);</span></pre>
+            </div>
+        </div>
+
+        <h3>Using Math.max()</h3>
+        <h4>Find highest value</h4>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Use Math.max.apply to find the highest number in an array</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+
+function myArrayMax(arr) {
+    return Math.max.apply(null, arr);
+}
+
+console.log(myArrayMax(points));</span></pre>
+            </div>
+        </div>
+
+
+        <h3>Using Math.min()</h3>
+        <h4>Find lowest value</h4>
+
+        <div class="row">
+            <div class="col-6">
+                <p>Use Math.max.apply to find the highest number in an array</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+
+      function myArrayMax(arr) {
+      return Math.min.apply(null, arr);
+      }
+
+      console.log(myArrayMax(points));</span></pre>
+            </div>
+        </div>
+
+
+        <h3>Best solution - custom</h3>
+
+
+        <div class="row">
+            <div class="col-6">
+                <p>Use Math.max.apply to find the highest number in an array</p>
+            </div>
+            <div class="col-6">
+                <pre class="example"><span class="code-js">var points = [40, 100, 1, 5, 25, 10];
+
+      function myArrayMax(arr) {
+      return Math.min.apply(null, arr);
+      }
+
+      console.log(myArrayMax(points));</span></pre>
+            </div>
+        </div>
+
+
+
+    </section>
     <script src="../../_js/jquery.js"></script>
     <script src="../../_js/bootstrap.bundle.js"></script>
 </body>
