--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                     <li><a href="pages/basics/this.html">this</a></li>
                     <li><a href="pages/basics/typeof.html">typeof</a></li>
                     <li><a href="pages/basics/variables.html">Variables and Scope</a></li>
+                    <li><a href="pages/basics/boolean.html">Boolean</a></li>
+                    <li><a href="pages/basics/if.html">if statements</a></li>
                 </ul>
             </ul>
         </nav>
@@ -67,7 +69,8 @@
                     <li><a href="pages/dom/adding-elements.html">Adding elements to the DOM</a></li>
 
                     <li>
-                        <h5>Events</h5></li>
+
+                    <h5>Events</h5></li>
                     <li><a href="pages/events/events.html">Events</a></li>
                     <li><a href="pages/events/the-event-object.html">The Event Object</a></li>
                     <li><a href="pages/events/event-propagation.html">Event Propagation</a></li>
@@ -86,6 +89,7 @@
                     <li>
                         <h5>Basics</h5></li>
                     <li><a href="pages/arrays/arrays.html">Arrays</a></li>
+                    <li><a href="pages/arrays/array-iteration.html">Array Iteration</a></li>
                     <li>
                         <h5>Methods</h5></li>
                     <li><a href="pages/arrays/editing-array-content.html">Editing Array Content</a></li>
