--- a/pages/functions/basic-functions.html
+++ b/pages/functions/basic-functions.html
@@ -66,7 +66,17 @@ document.getElementById("demo").innerHTML = myFunction(4);</span></pre>
             </div>
         </div>
 
+        <h5>Output</h5>
+        <div class="row">
+            <div class="col-6">
 
+                <p class="code-output">This example outputs: 0</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-output">0</span></pre>
+            </div>
+        </div>
 
 
 
@@ -121,6 +131,20 @@ var sum = 0;
 console.log(plus(2, 2));
 console.log(plus(2, 2, 2));
 console.log(plus(2, 2, 3));</span></pre>
+            </div>
+        </div>
+
+        <h5>Output</h5>
+        <div class="row">
+            <div class="col-6">
+
+                <p class="code-output">This example outputs: 4, 6, 7</p>
+            </div>
+
+            <div class="col-6">
+                <pre class="example"><span class="code-output">4
+6
+7</span></pre>
             </div>
         </div>
 
